syntax = "proto3";
package lorenzo.agent.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";
import "lorenzo/agent/v1/agent.proto";

option go_package = "github.com/Lorenzo-Protocol/lorenzo/x/agent/types";

// Query defines the gRPC querier service.
service Query {
  // Agent queries all agents
  rpc Agents(QueryAgentsRequest) returns (QueryAgentsResponse) {
    option (google.api.http).get = "/lorenzo/agent/v1/agents";
  }

  // Agent queries the agent of the specified escrow_address
  rpc Agent(QueryAgentRequest) returns (QueryAgentResponse) {
    option (google.api.http).get = "/lorenzo/agent/v1/agent/{id}";
  }

  // Admin queries the admin of the agent module
  rpc Admin(QueryAdminRequest) returns (QueryAdminResponse) {
    option (google.api.http).get = "/lorenzo/agent/v1/admin";
  }
}

// QueryAgentsRequest is the request type for the Query/Agents RPC method.
message QueryAgentsRequest {}

// QueryAgentsResponse is the response type for the Query/Agents RPC method.
message QueryAgentsResponse {
  // Agent Contains the details of the agent.
  repeated Agent agents = 1 [ (gogoproto.nullable) = false ];
}

// QueryAgentRequest is the request type for the Query/Agent RPC method.
message QueryAgentRequest {
  // id is the unique identifier of the agent
  uint64 id = 1;
}

// QueryAgentResponse is the response type for the Query/Agent RPC method.
message QueryAgentResponse {
  // Agent Contains the details of the agent.
  Agent agent = 1 [ (gogoproto.nullable) = false ];
}

message QueryAdminRequest {}

// QueryAgentResponse is the response type for the Query/Agent RPC method.
message QueryAdminResponse {
  string admin = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
}
